--- a/templates/core/pedido/lista_pedidos.html
+++ b/templates/core/pedido/lista_pedidos.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col-md-10">
                     <div class="alert alert-danger" role="alert">
-                        Não há pedidos cadastrados para o status <span class="text-uppercase fw-bold">{{ status_atual }}</span>.
+                        Não há pedidos cadastrados para o status {% if status_atual %} <span class="text-uppercase fw-bold">{{status_atual}}</span> {% endif %}.
                     </div> 
                 </div>                
             </div>  
